--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -44,3 +44,4 @@ $default-button-hover-color:  #f43f3f;
 $light-gray: #fafafa;
 $medium-gray: #eeeeee;
 $dark-gray: #aaaaaa;
+$darker-gray: #434343;
